<resources>
    <string name="app_name">Basketball Quiz</string>
    <string name="progressColor">#E16428</string>
    <string name="progressCorrectColor">#43A047</string>
    <string name="progressIncorrectColor">#F44336</string>
    <string name="MainQuestion">So, you think you\'re a real basketball fan, huh?</string>
    <string name="question_1_header">Question 1</string>
    <string name="question_2_header">Question 2</string>
    <string name="question_3_header">Question 3</string>
    <string name="question_4_header">Question 4</string>
    <string name="question_5_header">Question 5</string>
    <string name="question_6_header">Question 6</string>
    <string name="question_7_header">Question 7</string>
    <string name="question_8_header">Question 8</string>
    <string name="question_9_header">Question 9</string>
    <string name="question_10_header">Question 10</string>
    <string name="Question1">What franchise has played in the most NBA finals since 1947?</string>
    <string name="Question2">What two NBA players won the MVP trophy three times each from 1986 through 1992? (Choose all that apply)</string>
    <string name="Question3">What NBA player retired unexpectedly on November 7, 1991?</string>
    <string name="Question4">Why did Kevin Durant choose the jersey number 35?</string>
    <string name="Question5">What piece of basketball equipment formerly owned by Stephen Curry sold at auction for $3,190 on August 21, 2016?</string>
    <string name="Question6">What two NBA stars did Forbes list as the highest paid athletes for 1994? (Choose all that apply)</string>
    <string name="Question7">Who was the first NBA player to record a triple-double in the All-Star Game?</string>
    <string name="Question8">Why did Michael Jordan wear number 45 when he came out of retirement? (Choose all that apply)</string>
    <string name="Question9">Who invented the game of basketball?</string>
    <string name="Question10">What NBA team is named after a car part?</string>
    <string name="basketball_content_description">Basketball</string>
    <string name="question1_option1">Toronto Raptors</string>
    <string name="question1_option2">LA Lakers</string>
    <string name="question1_option3">Chicago Bulls</string>
    <string name="question2_option1">Micheal Jordan</string>
    <string name="question2_option2">Kobe Bryant</string>
    <string name="question2_option3">Magic Johnson</string>
    <string name="question3_hint">Player Name</string>
    <string name="question4_option1">His first coach was murdered at age 35</string>
    <string name="question4_option2">It\'s the first tetrahedral number</string>
    <string name="question4_option3">He plans to play until age 35</string>
    <string name="question5_option1">Headband</string>
    <string name="question5_option2">Mouthguard</string>
    <string name="question5_option3">Tennis shoes</string>
    <string name="question5_option4">Shoe laces</string>
    <string name="question6_option1">Micheal Jordan</string>
    <string name="question6_option2">Kobe Bryant</string>
    <string name="question6_option3">Shaquille O\'Neal</string>
    <string name="question7_hint">Player Name</string>
    <string name="question8_option1">His brother wore 45 in high school</string>
    <string name="question8_option2">He wore 45 playing minor league basketball</string>
    <string name="question8_option3">His number 23 had already been retired</string>
    <string name="question9_option1">James Naismith</string>
    <string name="question9_option2">Frank Mahan</string>
    <string name="question9_option3">Abner Doubleday</string>
    <string name="question9_option4">Walter Camp</string>
    <string name="question10_hint">Team Name</string>
    <string name="button_Text">Submit</string>
</resources>
